--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "simple-movie-search",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ranjithmano13.github.io/simple-movie-search-react-app",
+  "homepage": "https://ranjithmano13.github.io/moviesearch-reactapp",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
